# retro-rag-assistant

./: .env.example  .gitignore  Dockerfile  pyproject.toml
app/: main.py
app/api/: chat.py  deps.py  health.py  ingestion.py  schemas.py  search.py  sessions.py
app/chat/: logger.py  memory.py
app/core/: config.py  database.py  logging.py  models.py  mysql.py  openai_client.py  redis.py
app/graph/: builder.py  nodes.py  state.py
app/ingestion/: chunker.py  embedder.py  fetcher.py  lock.py  sync.py
app/search/: cache.py  hybrid.py  keyword.py  vector.py
docs/: 1-pager.md  phase-12-elasticsearch-search.md  tech-spec.md
migrations/: 001_initial_schema.sql  002_search_indexes.sql
tests/: conftest.py
tests/integration/: test_chat_api.py  test_graph.py  test_ingestion.py
tests/unit/: test_auth.py  test_cache.py  test_chat_memory.py  test_chunker.py  test_embedder.py  test_graph_nodes.py  test_schemas.py  test_searchers.py
